# ProjetOutils_Versioning

./: .gitignore  LICENSE  README.md  file1.py  keydvc.json  pyproject.toml  requirements.txt
.dvc/: config
data/: train.csv.dvc
server/: __init__.py  settings.py  urls.py
versionning/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
versionning/migrations/: 0001_initial.py  0002_alter_csv_options_alter_trainedmodel_options_and_more.py  0003_csv_categorical_columns_csv_data_types_and_more.py  0004_alter_csv_features.py  0005_remove_csv_description_csv_updated_at_and_more.py  0006_alter_csv_features.py  0007_alter_trainedmodel_algorithm.py  0008_trainedmodel_predictions_trainedmodel_residuals.py
versionning/templates/: base.html  dashboard.html  model_detail.html  model_history.html  model_results.html  preprocess_data.html  train_model.html  upload_csv.html
versionning/templates/registration/: login.html
versionning/templatetags/: __init__.py  custom_filters.py
